--- a/frontend/src/pages/PostPage/PostPage.css
+++ b/frontend/src/pages/PostPage/PostPage.css
@@ -1,11 +1,15 @@
-.post-page-heading {
+.post-page-main-div {
+  margin-left: 5px;
+}
+
+.post-container-heading {
   margin-left: 25px;
 }
 
-.post-page-heading-para {
+.post-container-heading-para {
   font-size: 20px;
 }
 
-.post-page-content-div {
+.post-container-content-div {
   display: inline-block;
 }
