--- a/frontend/src/pages/RepostPage/RepostPage.css
+++ b/frontend/src/pages/RepostPage/RepostPage.css
@@ -10,6 +10,10 @@
   font-size: 20px;
 }
 
+.query-repost-heading-para {
+  font-size: 20px;
+}
+
 .repost-container-content-div {
   display: inline-block;
 }
