--- a/frontend/src/pages/ProjectPage/ProjectPage.css
+++ b/frontend/src/pages/ProjectPage/ProjectPage.css
@@ -17,3 +17,11 @@
 .result-container-required-star {
   color: red;
 }
+
+.project-container-required-star {
+  color: red;
+}
+
+.query-project-required-star {
+  color: red;
+}
